# proga2sem

./: a.out  git34drozd.docx  git3drozd.docx  lab1p.c  lab2p.c  lab4p.c  lab5p.c  sort1.c
Rgr/: 3rgrp.c  4rgrp.c  5rgrp.c
Rgr/palind_cm/: CMakeLists.txt  rgr1.txt  запуск файла
Rgr/palind_cm/include/: palind.h
Rgr/palind_cm/src/: main.c  palind.c
Rgr/palind_cm/test/: test_palind.c
lab6p/: libb.h  libbb.c  main.c
lab7p/: 1.c  2.c  3.c  4.c  5.c  6.c  lab7p.md  t2  t3  t4  t5  t6  thread1
lab8p/: code.py  test_code.py
lab8p/src/: code.py
lab8p/test/: test_code.py
qwert/: lab1p.c  lab2prog.c
